# strainr

./: .coverage  .gitignore  README.md  StrainClassify.py  build_db.prof  environment.yml  inspect_parquet.py  newStrainDB.py  newstrainclassify.py  okay_bin.ipynb  profiled_db_k21.db.parquet  pyproject.toml  python-package-conda.yml  roary_pangenome.ipynb  run_strainr_pipeline.py  strainr_bin.py  strainr_plus.code-workspace  test_analyze.py  test_binning.py  test_database.py  test_db_disk.db.parquet  test_db_inmem.db.parquet  test_db_skip_n_false.db.parquet  test_db_skip_n_true.db.parquet  test_kmer_database.py  test_output.py  test_rust_build.py  test_sequence.py  test_strain_kmer_db.py  test_utils.py
.github/blocks/: all.json
.github/workflows/: python-package-conda.yml
docs/: conf.py  index.rst
kmer_counter_rs/: .gitignore  Cargo.toml
kmer_counter_rs/src/: lib.rs
notebooks/: Untitled-1.ipynb  analyze_raw.ipynb  bayesian.ipynb  binning.ipynb  classifier.py  compare_strainr_values.ipynb  dataframe_database.ipynb  ecoli2.ipynb  exploring.ipynb  queue.py  results.ipynb  roary_pangenome.ipynb  run_pd_thing.py  sc_extra.py  test_clustering.ipynb
old_code/: old_classify.py  old_customdb.py  old_db.py
profiling_genomes/: genome1.fna  genome2.fna
scripts/: assemble_strainr.sh  build_db.py  fcluster.ipynb  sc_extra.py  strainr-bin.py  strainr-classify-clean.py  strainr-counters.py  strainr-db.py  strainr-dbpan.py  strainr-pangenome.py  test_shareable_list.py
src/strainr/: __init__.py  analyze.py  binning.py  build_db.py  classify.py  convert_db_format.py  database.py  genomic_types.py  kmer_database.py  output.py  parameter_config.py  running.py  sequence.py  utils.py
strainr/: __init__.py  analyze.py  binning.py  build_db.py  classify.py  convert_db_format.py  database.py  exceptions.py  genomic_types.py  kmer_database.py  logging_config.py  output.py  parameter_config.py  performance.py  running.py  sequence.py  strainr-analyze.py  strainr-bin.py  strainr-classify-clean.py  strainr-classify.py  strainr-classify.test.py  strainr-counters.py  strainr-db.py  strainr-dbpan.py  strainr-pangenome.py  temp.r  unused.py  utils.py
test_custom_genomes/: genome1.fna  genome2.fna
tests/: conftest.py  test_analyze.py  test_binning.py  test_build_db.py  test_classify.py  test_database.py  test_kmer_counter_rs.py  test_kmer_database.py  test_output.py  test_sequence.py  test_strain_kmer_db.py  test_utils.py
