[tool.poetry]
name = "strainr"
version = "0.1.0"
description = ""
authors = ["mladen5000 <mladen.rasic@gmail.com>"]
packages = [{include = "strainr"}]


[tool.poetry.dependencies]
python = ">3.10,<=3.14"
numpy = "^2.2.6"
scipy = "^1.15.3"
pandas = "~2.2.0"
pyarrow = "^17.0.0" # Added pyarrow
mmh3 = "^4.1.0" # Added mmh3
typer = {extras = ["all"], version = "^0.12.3"} # Added typer
pydantic = "^2.0.0" # Added pydantic
tqdm = "^4.67.1"
biopython = "^1.85"
ncbi-genome-download = "^0.3.3"
kmer-counter-rs = {path = "/app/kmer_counter_rs/target/wheels/kmer_counter_rs-0.1.0-cp312-cp312-linux_x86_64.whl"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0" # Ensuring pytest is a dev dependency

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

# PROJECT_ROOT/pyproject.toml
[tool.pytest.ini_options]
# Add other pytest configurations if needed, e.g., testpaths
testpaths = [
    "tests"
]

[tool.maturin]
manifest-path = "kmer_counter_rs/Cargo.toml"
module-name = "kmer_counter_rs"